dynamically_typed_tests/invalid/variables/became_valid/doubleDeclare.wacc
# redeclaration of variable

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  x = 10 ;
  x = 20
end
